--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
-  <title>NY Time</title>
+  <title>El Tiempo</title>
 </head>
 <body>
   <section class="container-fluid">
@@ -15,7 +15,7 @@
       <div class="col-12 col-lg-6 offset-lg-3 text-center">
         <h1>El clima</h1>
         <div class="col-12 col-md-8 offset-md-2 col-lg-10 offset-lg-1">
-          <div class="col-4 offset-4 col-lg-4 offset-lg-4 out">
+          <div class="col">
             <img src="" alt="" class="img-weather">
           </div>
           <div class="col-12 col-md-8-offset-md-2" id="tmp">
