--- a/public/index.html
+++ b/public/index.html
@@ -5,28 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans:600" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <title>El Tiempo</title>
 </head>
 <body>
   <section class="container-fluid">
     <div class="row">
-      <div class="col-12 col-lg-6 offset-lg-3 text-center">
-        <h1>El clima</h1>
+      <div class="col-12 col-lg-6 offset-lg-3 text-center title">
+        <h1>El Tiempo</h1>
         <div class="col-12 col-md-8 offset-md-2 col-lg-10 offset-lg-1">
           <div class="col">
             <img src="" alt="" class="img-weather">
           </div>
-          <div class="col-12 col-md-8-offset-md-2" id="tmp">
+          <div class="col-12 col-md-8 offset-md-2" id="tmp">
             <!--temperatura-->
           </div>
-          <div class="col-12 col-md-8-offset-md-2">
-            <!--data-->
-            <ul class="info-time">
-
-            </ul>
-          </div>
+          <div class="col-12 col-md-8-offset-md-2 info-time text-left box-info"><!--data--></div>
         </div>
       </div>
     </div>
