añade prediccion de la semana

--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,16 @@
   <title>El Tiempo</title>
 </head>
 <body>
+  <header class="container-fluid">
+    <div class="row">
+      <nav class="col-12">
+        <h1 class="text-center">El Tiempo</h1>
+      </nav>
+    </div>
+  </header>
   <section class="container-fluid">
     <div class="row">
       <div class="col-12 col-lg-6 offset-lg-3 text-center title">
-        <h1>El Tiempo</h1>
         <div class="col-12 col-md-8 offset-md-2 col-lg-10 offset-lg-1">
           <div class="col">
             <img src="" alt="" class="img-weather">
@@ -22,6 +28,7 @@
             <!--temperatura-->
           </div>
           <div class="col-12 col-md-8-offset-md-2 info-time text-left box-info"><!--data--></div>
+          <div class="col-12 col-md-8-offset-md-2 info-time text-left box-week"><!--data--></div>
         </div>
       </div>
     </div>
