--- a/public/index.html
+++ b/public/index.html
@@ -13,28 +13,21 @@
   <header class="container-fluid">
     <div class="row">
       <nav class="col-12">
-        <h1 class="text-center">El Tiempo</h1>
+        <h1 class="text-center title">El Tiempo</h1>
       </nav>
     </div>
   </header>
   <section class="container-fluid">
     <div class="row">
-      <div class="col-12 col-lg-6 offset-lg-3 text-center title">
-        <div class="col-12 col-md-8 offset-md-2 col-lg-10 offset-lg-1">
-          <div class="col">
-            <img src="" alt="" class="img-weather">
-          </div>
-          <div class="col-12 col-md-8 offset-md-2" id="tmp">
-            <!--temperatura-->
-          </div>
-          <div class="col-12 col-md-8-offset-md-2 info-time text-left box-info"><!--data--></div>
-          <div class="col-12 col-md-8-offset-md-2 info-time text-left box-week"><!--data--></div>
-        </div>
+      <div class="col-12 box-info"><!--data--></div>
       </div>
     </div>
     <div class="row">
-      <div class="col-12 text-center">
-        <input class="btn btn-primary" type="button" value="Predicciones del clima" id="btn-prediction">
+      <div class="col-12 col-md-8-offset-md-2 info-time box-week"><!--data--></div>
+    </div>
+    <div class="row">
+      <div class="col-12 text-center mb-3">
+        <input class="btn btn-green" type="button" value="Predicciones del clima" id="btn-prediction">
       </div>
     </div>
   </section>
